# fantasy-football-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  cdk-deploy-to.sh  cdk.context.json  cdk.json  constants.py  deployment.py  package.json  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt
collect_statistics/src/: app.py  requirements.txt
collect_statistics/src/lib/model/: nfl.py
collect_statistics/src/lib/scrape/: team_rankings.py
collect_statistics/src/lib/scrape/dateutil/: constants.py  helpers.py
database/: infrastructure.py
fantasy_football_scraper/: fantasy_football_scraper_stack.py
format_statistics/src/: app.py  requirements.txt
scripts/: install-deps.sh  run-tests.sh
setup_statistics/runtime/: app.py
setup_statistics/src/: app.py
tests/: constants.py
tests/unit/: test_fantasy_football_scraper_stack.py
tests/unit/database/: test_infrastructure.py
