[tool.poetry]
name = "fantasy-football-scraper"
version = "0.1.0"
description = ""
authors = ["Connor Berg <bergconnor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.38.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
